
// written by Kyehwan Lee, NIST 2018.12.11

syntax = "proto3";

package srx_grpc;


// Interface exported by the server.
service SRxApi {
  rpc SendPacketToSRxServer(PduRequest) returns (PduResponse) {}

}


message PduRequest {
  bytes data = 1;
  uint32 length = 2;
}

message PduResponse {
  bytes data = 1;
  uint32 length = 2;
  uint32 validation_status = 3;
}




